--- a/src/style.css
+++ b/src/style.css
@@ -1,9 +1,10 @@
 body {
-    font-family: arial, sans-serif;
+    font-family: sans-serif;
+    background-color: #a093ff;
 }
 
 h1 {
-    color: #878787;
+    color: #ffffff;
     font-size: 24px;
     font-weight: 100;
     line-height: 28px;
@@ -19,8 +20,7 @@ li {
     list-style: none;
     margin: 0;
     padding: 0;
-
-    color: rgb(135, 135, 135);
+    color: #ffffff;
     font-size: 16px;
     font-weight: 100;
     line-height: 19px;
@@ -36,8 +36,10 @@ li:first-letter {
 }
 
 .weather-app {
+    max-width: 600px;
+    margin: 30px auto;
     padding: 20px;
-    border: 1px solid #dadde1;
+    border: 2px solid #ffff;
     border-radius: 5px;
 }
 
@@ -52,7 +54,7 @@ li:first-letter {
 }
 
 .weather-temperature strong {
-    color: rgb(33, 33, 33);
+    color: rgb(105, 5, 205);
     font-size: 64px;
     line-height: 1;
     font-weight: 400;
@@ -65,7 +67,7 @@ li:first-letter {
 }
 
 .weather-temperature .active {
-    color: rgb(33, 33, 33);
+    color: rgb(105, 5, 205);
     cursor: default;
 }
 
@@ -76,7 +78,7 @@ li:first-letter {
 .weather-forecast {
     margin-top: 20px;
     text-align: center;
-    color: #000;
+    color: rgb(105, 5, 205);
 }
 
 .weather-forecast-date {
