--- a/src/style.css
+++ b/src/style.css
@@ -16,9 +16,10 @@ h1 {
     background-image: linear-gradient(to bottom right, #5040cf, rgb(205, 162, 247));
     font-size: 30px;
     font-weight: 100;
-    line-height: 30px;
+    line-height: 35px;
     margin-bottom: 0;
-    width: 180px;
+    width: 190px;
+    border: 2px solid #ffff;
     border-radius: 5px;
 }
 
@@ -70,9 +71,13 @@ form {
     text-align: center;
 }
 
-.btn-sm {
+.btn {
+    color: #ffffff;
+    background-image: linear-gradient(to bottom right, #5040cf, rgb(205, 162, 247));
     line-height: 20px;
     margin: 15px 5px;
+        border: 2px solid #ffff;
+    border-radius: 5px;
 }
 
 .weather-icon {
